# GLBrebis

./: .gitignore  CHANGELOG.md  CMakeLists.txt  GLBrebis.bat  GLBrebis.sh  LICENSE  README.md  update_changelog.sh
cmake/: EmbedResource.cmake
cmake/Hunter/: config.cmake
example/: BrebisGL.h  CMakeLists.txt  LICENSE  MutEngine.cpp  MutEngine.h  MutGL.c  MutGL.h  MutShaderProgram.cpp  MutShaderProgram.h  main.cpp
example/assets/: shader.frag  shader.vert  texture.png.credits.txt
extensions/GL/: glext_extra.h
include/GL/: glext_extra.h
include/GLES/: gl.h  glext.h
include/GLES2/: gl2.h
include/GLES3/: gl3.h  gl31.h
src/: GLBrebisApp.cpp  GLBrebisApp.h  GLBrebisCodeGenerator.cpp  GLBrebisCodeGenerator.h  GLBrebisData.cpp  GLBrebisData.h  GLBrebisHTTPDefaultRequestHandler.cpp  GLBrebisHTTPDefaultRequestHandler.h  GLBrebisHTTPRequestHandlerFactory.cpp  GLBrebisHTTPRequestHandlerFactory.h  GLBrebisParser.cpp  GLBrebisParser.h  GLBrebisService.cpp  GLBrebisService.h  GLBrebisUtilities.cpp  GLBrebisUtilities.h
src/com/glbrebis/: GLBrebis.groovy  GLBrebisASTParser.groovy  GLBrebisASTVisitor.groovy  GLBrebisCodeGenerator.groovy  GLBrebisDeclaration.groovy  GLBrebisFile.groovy  GLBrebisFunction.groovy  GLBrebisGroup.groovy  GLBrebisParserResult.groovy  GLBrebisUtilities.groovy
template/: GL.c  GL.c.template  GL.h.in  GL.h.template
templates/: GL.c.in  GL.h.in  GLExt.h.in
xml/: extra.xml
