################################################################################
# Author: Mathieu-André Chiasson
# Date: 2017-07-21
#
# This is free and unencumbered software released into the public domain.
#
# Anyone is free to copy, modify, publish, use, compile, sell, or distribute
# this software, either in source code form or as a compiled binary, for any
# purpose, commercial or non-commercial, and by any means.
#
# In jurisdictions that recognize copyright laws, the author or authors of this
# software dedicate any and all copyright interest in the software to the public
# domain. We make this dedication for the benefit of the public at large and to
# the detriment of our heirs and successors. We intend this dedication to be an
# overt act of relinquishment in perpetuity of all present and future rights to
# this software under copyright law.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN
# ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
# WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
#
# For more information, please refer to <http://unlicense.org/>
################################################################################

cmake_minimum_required(VERSION 3.0)

include(ExternalProject)

project(MutCube)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

if(EMSCRIPTEN)
    set(CMAKE_EXECUTABLE_SUFFIX ".html")
    set(CMAKE_C_FLAGS   "-s USE_SDL=2 -s TOTAL_MEMORY=134217728 -s ASSERTIONS=1 ${CMAKE_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "-s USE_SDL=2 -s TOTAL_MEMORY=134217728 -s ASSERTIONS=1 ${CMAKE_CXX_FLAGS}")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -s USE_SDL=2 -s TOTAL_MEMORY=134217728 --preload-file assets")

    include(ExternalProject)
    ExternalProject_Add(
        glm
        PREFIX ${MutCube_SOURCE_DIR}/glm
        URL https://github.com/g-truc/glm/archive/0.9.8.4.tar.gz
        URL_HASH SHA1=5b9d3bbdc2ec29c7339f34b701d53e1b625a7712
        GIT_TAG 0.9.8.4
        CONFIGURE_COMMAND ""
        BUILD_COMMAND ""
        INSTALL_COMMAND ""
        LOG_DOWNLOAD ON)
    ExternalProject_Get_Property(glm source_dir)
    include_directories(${source_dir})
else()
    include("cmake/HunterGate.cmake")
    HunterGate(
        URL "https://github.com/ruslo/hunter/archive/v0.19.26.tar.gz"
        SHA1 "362b3c2fd8f0f50fc03cec5105be8fd4376ea886"
    )
    hunter_add_package(SDL2)
    hunter_add_package(glm)
    find_package(SDL2 CONFIG REQUIRED)
    find_package(glm CONFIG REQUIRED)

    add_custom_command(
        OUTPUT
            ${MutCube_SOURCE_DIR}/MutGL.c
            ${MutCube_SOURCE_DIR}/MutGL.h
        COMMAND
            GLBrebis -p Mut
        WORKING_DIRECTORY
            ${MutCube_SOURCE_DIR}
        DEPENDS
            GLBrebis
    )
    set_source_files_properties(${MutCube_SOURCE_DIR}/MutGL.c PROPERTIES GENERATED TRUE)
    set_source_files_properties(${MutCube_SOURCE_DIR}/MutGL.h PROPERTIES GENERATED TRUE)

endif()


add_executable(MutCube
    MutEngine.cpp
    MutGL.c # Generated by GLBrebis
    MutShaderProgram.cpp
    main.cpp
)

add_dependencies(MutCube glm)

configure_file(${MutCube_SOURCE_DIR}/assets/texture.png
               ${MutCube_BINARY_DIR}/assets/texture.png COPYONLY)

configure_file(${MutCube_SOURCE_DIR}/assets/shader.vert
               ${MutCube_BINARY_DIR}/assets/shader.vert COPYONLY)

configure_file(${MutCube_SOURCE_DIR}/assets/shader.frag
               ${MutCube_BINARY_DIR}/assets/shader.frag COPYONLY)

if(NOT EMSCRIPTEN)
    target_link_libraries(MutCube
        SDL2::SDL2 glm
    )
endif()
