################################################################################
# Author: Mathieu-André Chiasson
# Date: 2017-07-21
#
# This is free and unencumbered software released into the public domain.
#
# Anyone is free to copy, modify, publish, use, compile, sell, or distribute
# this software, either in source code form or as a compiled binary, for any
# purpose, commercial or non-commercial, and by any means.
#
# In jurisdictions that recognize copyright laws, the author or authors of this
# software dedicate any and all copyright interest in the software to the public
# domain. We make this dedication for the benefit of the public at large and to
# the detriment of our heirs and successors. We intend this dedication to be an
# overt act of relinquishment in perpetuity of all present and future rights to
# this software under copyright law.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN
# ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
# WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
#
# For more information, please refer to <http://unlicense.org/>
################################################################################

cmake_minimum_required(VERSION 3.6)

project(MutCube)

set(CMAKE_C_STANDARD 98)

include(../cmake/HunterGate.cmake)
HunterGate(
    URL "https://github.com/ruslo/hunter/archive/v0.23.11.tar.gz"
    SHA1 "b732407d782459f89950ab52bc0ff9612f3e4be2"
    LOCAL # <----- Use cmake/Hunter/config.cmake
)

##
# This instructs our C compiler to be strict ANSI C compliant when compiling our
# generated MutGL.c. This is completely optional and not required. This is just
# to prove to you that the generated code from GLBrebis is ANSI C compliant.
##
if (${CMAKE_C_COMPILER_ID} STREQUAL Clang OR
    ${CMAKE_C_COMPILER_ID} STREQUAL AppleClang OR
    ${CMAKE_C_COMPILER_ID} STREQUAL GNU)

    message(WARNING "Configuring our C compiler to strict ANSI C standard")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Werror -ansi -pedantic-errors -Wmissing-prototypes -Wstrict-prototypes -Wold-style-definition")

endif()

set(CMAKE_INCLUDE_CURRENT_DIR ON)

hunter_add_package(SDL2)
hunter_add_package(glm)
find_package(SDL2 CONFIG REQUIRED)
find_package(glm CONFIG REQUIRED)

add_executable(MutCube
    MutEngine.cpp
    MutGL.c
    MutShaderProgram.cpp
    main.cpp
    BrebisGL.h # Generated by GLBrebis
)

configure_file(${MutCube_SOURCE_DIR}/assets/texture.png
               ${MutCube_BINARY_DIR}/assets/texture.png COPYONLY)

configure_file(${MutCube_SOURCE_DIR}/assets/shader.vert
               ${MutCube_BINARY_DIR}/assets/shader.vert COPYONLY)

configure_file(${MutCube_SOURCE_DIR}/assets/shader.frag
               ${MutCube_BINARY_DIR}/assets/shader.frag COPYONLY)

find_package(OpenGL REQUIRED)

target_link_libraries(MutCube
    SDL2::SDL2
    SDL2::SDL2main
    glm
    ${OPENGL_gl_LIBRARY}
)
